--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
-: Generate Datas
+
+name: Generate Datas
 
 on:
   schedule: # execute every 12 hours
@@ -23,3 +24,4 @@ jobs:
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+     
